feat: Implement WhatsApp integration with session management, messaging APIs, and admin UI.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ CLOUDINARY_API_SECRET=
 CLOUDINARY_API_KEY=
 
 CLOUDINARY_CLOUD_NAME=
+
+# WhatsApp Integration (32 characters exactly)
+WHATSAPP_ENCRYPTION_KEY=your-32-character-key-here-now
