--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation tsx server.ts",
+    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation tsx server.ts",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
@@ -18,6 +18,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@lexical/html": "^0.38.2",
     "@payloadcms/db-mongodb": "^3.54.0",
@@ -58,6 +59,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -70,13 +72,16 @@
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.12.30",
     "lucide-react": "^0.554.0",
     "next": "15.4.7",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "ofetch": "^1.5.1",
     "payload": "^3.54.0",
+    "pino": "^10.1.0",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
@@ -86,6 +91,8 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sharp": "0.34.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -98,6 +105,7 @@
     "@testing-library/react": "16.3.0",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^22.5.4",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
@@ -107,6 +115,7 @@
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
     "prettier": "^3.4.2",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
