feat: Update WhatsApp integration with new environment variables, improved connection handling, and enhanced admin UI for message management.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
+# Next.js Environment Variables
+
+# Database
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
+
+# Payload CMS
 PAYLOAD_SECRET=YOUR_SECRET_HERE
 NEXT_PUBLIC_BACKEND_URL=
 
-
+# Cloudinary (optional)
 CLOUDINARY_API_SECRET=
-
 CLOUDINARY_API_KEY=
-
 CLOUDINARY_CLOUD_NAME=
 
 # WhatsApp Integration (32 characters exactly)
 WHATSAPP_ENCRYPTION_KEY=your-32-character-key-here-now
+
+# WhatsApp Service URL (Express server)
+NEXT_PUBLIC_WHATSAPP_SERVICE_URL=http://localhost:3001
