--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation tsx server.ts",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation tsx server.ts",
+    "dev:whatsapp": "cd node-bailway-project && npm run dev",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:whatsapp\" --names \"next,whatsapp\" --prefix-colors \"blue,green\"",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
@@ -18,7 +19,8 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@lexical/html": "^0.38.2",
     "@payloadcms/db-mongodb": "^3.54.0",
@@ -59,7 +61,6 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -82,6 +83,7 @@
     "pino": "^10.1.0",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
@@ -89,6 +91,7 @@
     "react-leaflet": "^5.0.0",
     "react-phone-number-input": "^3.4.14",
     "react-resizable-panels": "^3.0.6",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "sharp": "0.34.2",
     "socket.io": "^4.8.1",
@@ -109,6 +112,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "concurrently": "^9.2.1",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.7",
     "jsdom": "26.1.0",
