feat: Implement payment success and error pages, and integrate a new WhatsApp messaging and session management backend service.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "A blank template to get started with Payload 3.0",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation tsx server.ts",
@@ -23,14 +22,14 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@lexical/html": "^0.38.2",
-    "@payloadcms/db-mongodb": "^3.54.0",
-    "@payloadcms/next": "^3.54.0",
-    "@payloadcms/payload-cloud": "^3.54.0",
+    "@payloadcms/db-mongodb": "3.54.0",
+    "@payloadcms/next": "3.54.0",
+    "@payloadcms/payload-cloud": "3.54.0",
     "@payloadcms/plugin-import-export": "3.54",
-    "@payloadcms/richtext-lexical": "^3.54.0",
-    "@payloadcms/storage-vercel-blob": "^3.54.0",
-    "@payloadcms/translations": "^3.54.0",
-    "@payloadcms/ui": "^3.54.0",
+    "@payloadcms/richtext-lexical": "3.54.0",
+    "@payloadcms/storage-vercel-blob": "3.54.0",
+    "@payloadcms/translations": "3.54.0",
+    "@payloadcms/ui": "3.54.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -75,7 +74,7 @@
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.12.30",
     "lucide-react": "^0.554.0",
-    "next": "15.4.7",
+    "next": "15.4.8",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "ofetch": "^1.5.1",
