--- a/node-bailway-project/package.json
+++ b/node-bailway-project/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "start": "tsc && node dist/server.js",
     "dev": "nodemon --watch src -e ts --exec \"npx tsc && node dist/server.js\""
   },
